Updated button to stop flicker

--- a/client/app/app.less
+++ b/client/app/app.less
@@ -107,6 +107,8 @@ section.page-container {
   position: fixed;
   right: 1em;
   top: 1em;
+
+  -webkit-backface-visibility: hidden;
   /*width: 4em;
   height: 4em;*/
   /*background: @main-background-color url('/assets/images/icon-menu.svg') no-repeat center center;
